Version 1.0.13


Version 1.0.12
- Bugfix


Version 1.0.11

- Added Ability To Backup Single Notebook Or Single Folder
- Added List Share Email Addresses
- Added Removing Share Email Addresses
- Added Reseting Screen To Default
- Added Ability To Reload Device
- Added Different Menu Modes
- Added Ability To Login With SSH Key
- Added Ability To See If Notebook Is Pinned
- Fixed ContextMenu On Notebooks
- Fixed Move To Trash
- Added Empty Trash To ContextMenu
- Fixed Wrong Blue Color
- Added Pin/Unpin To ContextMenu
- Made Synchronizing much faster (Downloading Metadata 84 % faster)

Version 1.0.10

- Bugfixes
- UI Package Updates
- Notification Improvements

Version 1.0.9

- Bugfixes

Version 1.0.6

- Performance improvements
- Design fixes
- Bugfixes
- Settings added
- Reupload screen images