@@ -362,3 +362,5 @@ Dist/MacOS/
 Dist/
 
 Api/api/
+
+Source/SlithinMarketplace/Keys.json
