@@ -1,0 +1,8 @@
+﻿namespace SlithinMarketplace.Models;
+
+public class Screen
+{
+    public string Filename { get; set; }
+    public string ID { get; set; }
+    public string Name { get; set; }
+}
