@@ -2,7 +2,6 @@
 
 public class User
 {
-    public string HashedPassword { get; set; }
-    public string ID { get; set; }
+    public string PasswordHash { get; set; }
     public string Username { get; set; }
 }
