@@ -23,7 +23,7 @@ public class App : Application
 
         if (ApplicationLifetime is IClassicDesktopStyleApplicationLifetime desktop)
         {
-            desktop.MainWindow = new ConnectWindow();
+            desktop.MainWindow = settings.IsFirstStart ? new FirstStartWindow() : new ConnectWindow();
         }
 
         AppDomain.CurrentDomain.UnhandledException += (s, e) =>
