@@ -20,6 +20,8 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Slithin.Scripting.Interacti
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SlithinMarketplace", "..\SlithinMarketplace\SlithinMarketplace.csproj", "{8F09E81C-9C7F-46A8-9E75-B65D6AE9F96C}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Slithin.Marketplace.Models", "..\Slithin.Marketplace.Models\Slithin.Marketplace.Models.csproj", "{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -164,6 +166,26 @@ Global
 		{8F09E81C-9C7F-46A8-9E75-B65D6AE9F96C}.Release|x64.Build.0 = Release|Any CPU
 		{8F09E81C-9C7F-46A8-9E75-B65D6AE9F96C}.Release|x86.ActiveCfg = Release|Any CPU
 		{8F09E81C-9C7F-46A8-9E75-B65D6AE9F96C}.Release|x86.Build.0 = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|ARM.ActiveCfg = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|ARM.Build.0 = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|ARM64.ActiveCfg = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|ARM64.Build.0 = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|x64.Build.0 = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Debug|x86.Build.0 = Debug|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|Any CPU.Build.0 = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|ARM.ActiveCfg = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|ARM.Build.0 = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|ARM64.ActiveCfg = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|ARM64.Build.0 = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|x64.ActiveCfg = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|x64.Build.0 = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|x86.ActiveCfg = Release|Any CPU
+		{8198F07C-D6CB-470D-B524-8A7CE9A7EE23}.Release|x86.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
