@@ -25,8 +25,8 @@
                     <ItemsControl Items="{TemplateBinding Cards, Mode=TwoWay}" VerticalAlignment="Top">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <styles:Card Background="Gray" Margin="3" HorizontalAlignment="Center" MaxHeight="275">
-                                    <StackPanel Orientation="Vertical">
+                                <styles:Card Background="#e2e2e2" Margin="3" HorizontalAlignment="Center" MaxHeight="275">
+                                    <Grid RowDefinitions="*,*,*">
                                         <TextBlock Text="{Binding Name}" Margin="0,0,0,5" TextAlignment="Center" FontSize="17" FontWeight="Medium" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" />
 
                                         <Image Source="{Binding Image, Mode=TwoWay}" Margin="2" />
@@ -42,7 +42,7 @@
                                                 <DrawingPresenter Width="40" Height="40" Drawing="{DynamicResource EvaIcons.Minus}" />
                                             </Button>
                                         </Grid>
-                                    </StackPanel>
+                                    </Grid>
                                 </styles:Card>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
