@@ -1,0 +1,9 @@
+﻿namespace SlithinMarketplace.Models;
+
+public class Screen
+{
+    public string FileID { get; set; }
+    public string Filename { get; set; }
+    public string ID { get; set; }
+    public string Name { get; set; }
+}
