@@ -1,6 +1,7 @@
 ﻿using EmbedIO;
 using EmbedIO.Actions;
 using EmbedIO.BearerToken;
+using SlithinMarketplace.Controller;
 using Swan.Logging;
 
 namespace SlithinMarketplace;
@@ -17,17 +18,6 @@ public static class Program
             // Once we've registered our modules and configured them, we call the RunAsync() method.
             server.RunAsync();
 
-#if DEBUG
-            var browser = new System.Diagnostics.Process()
-            {
-                StartInfo = new System.Diagnostics.ProcessStartInfo(url) { UseShellExecute = true }
-            };
-            browser.Start();
-            // Wait for any key to be pressed before disposing of our web server.
-            // In a service, we'd manage the lifecycle of our web server using
-            // something like a BackgroundWorker or a ManualResetEvent.
-
-#endif
             Console.ReadKey(true);
         }
     }
@@ -41,8 +31,12 @@ public static class Program
                 .WithMode(HttpListenerMode.EmbedIO))
             // First, we will configure our web server by adding Modules.
             .WithModule(new BearerTokenModule("/", basicAuthProvider, new string('f', 40)))
-            .WithWebApi("/slithin/api", m => m
-                .RegisterController<ApiController>())
+            .WithWebApi("/", m =>
+            {
+                m.RegisterController<ScreenController>();
+                //m.RegisterController<FilesController>();
+            })
+
             .WithModule(new ActionModule("/", HttpVerbs.Any, ctx => ctx.SendDataAsync(new { Message = "Error" })));
 
         // Listen for state changes.
