@@ -1,6 +1,4 @@
-﻿using System.Text;
-using Amazon.S3;
-using Newtonsoft.Json;
+﻿using Amazon.S3;
 using SlithinMarketplace.Models;
 
 namespace SlithinMarketplace;
@@ -14,30 +12,55 @@ public class Repository
 
     public S3Wrapper Storage { get; set; }
 
-    public void AddScreen(string name, Stream strm)
+    public void AddScreen(Screen screen, Stream strm)
     {
-        Storage.UploadObjectFromStream("screens", name, strm);
+        Storage.UploadObject("screens", screen.ID, screen);
+        Storage.UploadObjectFromStream("files", screen.ID, strm);
     }
 
     public void AddUser(string username, string password)
     {
         var user = new User();
         user.Username = username;
-        user.PasswordHash = Utils.ComputeSha256Hash(password);
+        user.HashedPassword = Utils.ComputeSha256Hash(password);
 
-        Storage.UploadObjectFromStream("users", username, Serialize(user));
+        Storage.UploadObject("users", username, user);
+    }
+
+    public Stream GetFile(string bucket, string id)
+    {
+        return Storage.GetObjectStream(bucket, id);
+    }
+
+    public Screen GetScreen(string id)
+    {
+        return Storage.GetObject<Screen>("screens", id);
+    }
+
+    public IEnumerable<string> GetScreenIds()
+    {
+        return Storage.ListObjects("screens").Select(_ => _.Key);
+    }
+
+    public IEnumerable<Screen> GetScreens(int? count, int? skip)
+    {
+        var ids = GetScreenIds();
+
+        if (skip.HasValue)
+        {
+            ids = ids.Skip(skip.Value);
+        }
+
+        if (count.HasValue)
+        {
+            ids = ids.Take(count.Value);
+        }
+
+        return ids.Select(_ => GetScreen(_));
     }
 
     public User GetUser(string username)
     {
         return Storage.GetObject<User>("users", username);
-    }
-
-    private Stream Serialize(object obj)
-    {
-        var json = JsonConvert.SerializeObject(obj, Formatting.Indented);
-        var jsonRaw = Encoding.ASCII.GetBytes(json);
-
-        return new MemoryStream(jsonRaw);
     }
 }
