@@ -1,4 +1,5 @@
 ﻿using Amazon.S3;
+using Newtonsoft.Json;
 
 namespace SlithinMarketplace;
 
@@ -6,7 +7,15 @@ public class ServiceLocator
 {
     static ServiceLocator()
     {
-        var client = new AmazonS3Client();
+        var keys = JsonConvert.DeserializeObject<Dictionary<string, string>>(File.ReadAllText("keys.json"));
+
+        AmazonS3Config config = new AmazonS3Config();
+        config.ServiceURL = keys["Url"];
+        config.ForcePathStyle = true;
+        config.AuthenticationRegion = Amazon.RegionEndpoint.USEast1.SystemName;
+
+        AmazonS3Client client = new(keys["AccessKey"], keys["SecretKey"], config);
+
         Repository = new Repository(client);
     }
 
