@@ -10,11 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.7.9" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.8.10" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.8.23" />
     <PackageReference Include="EmbedIO" Version="3.4.3" />
     <PackageReference Include="EmbedIO.BearerToken" Version="3.4.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Slithin.Marketplace.Models\Slithin.Marketplace.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Keys.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
